--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,5 +1,5 @@
 //==============================================//
-//===// Responsive layout - mobile section //===//
+//===// Responsive design - mobile section //===//
 //==============================================//
 
 @include mobile {
