--- a/scss/main.scss
+++ b/scss/main.scss
@@ -385,7 +385,7 @@ footer {
 }
 
 //==========================================================//
-//===// Importing responisve layout (mobile & desktop) //===//
+//===// Importing responisve design (mobile & desktop) //===//
 //==========================================================//
 
 @import './mobile', './desktop';
